# DD

./: README.md
DD-V1/: config.yaml  main.py  pyproject.toml
DD-V1/Params/: dd_demo-gm_clu--shuffled:True--exclude at risk0.pickle  dd_demo-gnb_cls--shuffled:True--exclude at risk:0.pickle  dd_demo-l_cls--shuffled:True--exclude at risk:True.pickle  dd_demo-mnb_cls--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-ab_reg--shuffled:False--exclude at risk:0.pickle  dd_demo_phono-ab_reg--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-ap_clu--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-bg_cls--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-br_reg--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-cnb_cls--shuffled:False--exclude at risk:0.pickle  dd_demo_phono-cnb_cls--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-gb_cls--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-knn_cls--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-knn_reg--shuffled:True--exclude at risk:True.pickle  dd_demo_phono-l_cls--shuffled:False--exclude at risk:0.pickle  dd_demo_phono-l_cls--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-l_cls--shuffled:True--exclude at risk:True.pickle  dd_demo_phono-mlp_reg--shuffled:False--exclude at risk:0.pickle  dd_demo_phono-mlp_reg--shuffled:True--exclude at risk:0.pickle  dd_demo_phono-rf_cls--shuffled:False--exclude at risk:0.pickle  dd_demo_phono-sv_reg--shuffled:True--exclude at risk:True.pickle  dd_demo_phono-xgb_cls--shuffled:False--exclude at risk:0.pickle  (+87 more)
DD-V1/datasets/: IA_report.xlsx  (+2 more)
(+19690 files in other folders)
