[tool.poetry]
name = "DD-package"
version = "0.1.0"
description = ""
authors = ["sorooshi <sr.shalileh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.0"
scikit-learn = "^1.1.2"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
matplotlib = "^3.6.0"
plotly = "^5.10.0"
scikit-optimize = "^0.9.0"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

